Fix feature standfirst alignment on large viewport design

--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -3763,9 +3763,9 @@ body[data-content-type="video"] .article--visual .content__labels:first-child::b
       .tone--feature3 .article--feature .article__header .standfirst {
         margin: 0;
         width: 100%; }
-        .tone--feature1 .article--feature .article__header .standfirst > ul,
-        .tone--feature2 .article--feature .article__header .standfirst > ul,
-        .tone--feature3 .article--feature .article__header .standfirst > ul {
+        .tone--feature1 .article--feature .article__header .standfirst > *,
+        .tone--feature2 .article--feature .article__header .standfirst > *,
+        .tone--feature3 .article--feature .article__header .standfirst > * {
           margin-left: 240px;
           width: 620px; } }
   .tone--feature1 .article--feature .article__header .review-rating,
