--- a/ArticleTemplates/assets/scss/tones/_tone--feature.scss
+++ b/ArticleTemplates/assets/scss/tones/_tone--feature.scss
@@ -113,7 +113,7 @@
                     margin: 0;
                     width: 100%;
                     
-                    > ul {
+                    > * {
                         margin-left: 240px;
                         width: 620px;
                     }
