--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -5173,9 +5173,9 @@
         #sandbox .tone--feature3 .article--feature .article__header .standfirst {
           margin: 0;
           width: 100%; }
-          #sandbox .tone--feature1 .article--feature .article__header .standfirst > ul,
-          #sandbox .tone--feature2 .article--feature .article__header .standfirst > ul,
-          #sandbox .tone--feature3 .article--feature .article__header .standfirst > ul {
+          #sandbox .tone--feature1 .article--feature .article__header .standfirst > *,
+          #sandbox .tone--feature2 .article--feature .article__header .standfirst > *,
+          #sandbox .tone--feature3 .article--feature .article__header .standfirst > * {
             margin-left: 240px;
             width: 620px; } }
     #sandbox .tone--feature1 .article--feature .article__header .review-rating,
